# Twister

./: README.md  pyproject.toml
data/: chat_gpt.txt
data/exploration/: Exploration_DBPedia.ipynb  Exploration_Emoji.ipynb  dataset_search.ipynb
notebooks/: BERT-finetuning standalone.ipynb  Baseline.ipynb  FineTuningSentenceTransformers.ipynb  csr-notebook-v6.ipynb  csr-notebook-v7.ipynb  csr-notebook-v8.ipynb  csr-notebook-v9.ipynb
results/: plotter CW.ipynb  plotter summary.ipynb
src/: BERTFineTuning.py  CustomDataLoader.py  CustomImplementationBaseline.py  CustomImplementationV2.py  CustomImplementationV3.py  CustomTextDataset.py  GenericModels.py  KeywordEmbeddings.py  SentenceEmbeddings.py
