[tool.poetry]
name = "twister-v2"
version = "0.1.0"
description = "See README.md"
authors = ["Martijn Elands"]
readme = "README.md"
packages = [{include = "twister_v2"}]

[tool.poetry.dependencies]
python = "3.10.11"
torch = "^2.0.1"
torchtext = "^0.15.2"
torchdata = "^0.6.1"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
transformers = "^4.30.1"
sentence-transformers = "^2.2.2"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
nltk = "^3.8.1"
datasets = "^2.12.0"
torchmetrics = "^0.11.4"
focal-loss-torch = "^0.1.2"
python-dotenv = "^1.0.0"
cluestar = "^0.1.0"
umap-learn = "^0.5.3"
keybert = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
